turtleart.square.Square.scala.error
Compilation error:
Square:3: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^Square:5: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^Square:7: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^Square:9: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^