turtleart.square.Square.scala.code
override def run() {
  avance(200)
  gauche()
  avance(200)
  gauche()
  avance(200)
  gauche()
  avance(200)
  gauche()
}